Fix audit violations: VIBE™ rename, badge system, job posting, investor copy, dead CTAs

--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -118,8 +118,8 @@
             <p style="font-size: 1.2rem; color: #fff; margin-bottom: 3rem;">Early feedback from our beta testers. The engine is working.</p>
             <div class="grid grid-2">
                 <div style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #FFD700;">
-                    <!-- TODO: Replace "VibeCode" with the correct feature name once provided by stakeholder -->
-                    <h3 style="color: #FFD700; margin-bottom: 1rem;">"The VibeCode is Revolutionary"</h3>
+                    <!-- TODO: Replace "VIBE™" with the correct feature name once provided by stakeholder -->
+                    <h3 style="color: #FFD700; margin-bottom: 1rem;">"The VIBE™ is Revolutionary"</h3>
                     <p style="font-size: 1rem; font-style: italic; color: var(--muted);">"Comments flowing over the video without interrupting? This is how we should consume content. Game changer."</p>
                     <p style="margin-top: 1rem; font-size: 0.9rem; color: #888;">— Early Beta Tester</p>
                 </div>
@@ -142,13 +142,13 @@
         </div>
     </section>
 
-    <!-- VIBECODE EXPLANATION -->
-    <section class="vibecode-section" style="padding: 6rem 0; border-bottom: 1px solid var(--border);">
+    <!-- VIBE™ EXPLANATION -->
+    <section class="vibe-section" style="padding: 6rem 0; border-bottom: 1px solid var(--border);">
         <div class="container">
-            <h2>VIBECODE</h2>
-            <!-- TODO: Replace "VibeCode" with the correct feature name once provided by stakeholder -->
+            <h2>VIBE™</h2>
+            <!-- TODO: Replace "VIBE™" with the correct feature name once provided by stakeholder -->
             <p style="color: #fff; font-size: 1.3rem; margin-bottom: 2rem;">
-                <strong>VibeCode</strong> is Vertikal's real-time comment overlay system. Comments flow across the screen as you watch, creating a shared viewing experience without interrupting the content.
+                <strong>VIBE™</strong> is Vertikal's real-time comment overlay system. Comments flow across the screen as you watch, creating a shared viewing experience without interrupting the content.
             </p>
             <div class="grid grid-2">
                 <div style="border-left: 4px solid #333; padding-left: 1.5rem; margin-bottom: 2rem;">
@@ -157,7 +157,7 @@
                 </div>
                 <div style="border-left: 4px solid #333; padding-left: 1.5rem; margin-bottom: 2rem;">
                     <h3 style="color: #2962FF; margin-bottom: 0.5rem;">Replacement of Low-Signal Comments</h3>
-                    <p style="font-size: 0.95rem;">VibeCode replaces traditional comment sections with contextual, real-time engagement. No noise, just signal.</p>
+                    <p style="font-size: 0.95rem;">VIBE™ replaces traditional comment sections with contextual, real-time engagement. No noise, just signal.</p>
                 </div>
                 <div style="border-left: 4px solid #333; padding-left: 1.5rem; margin-bottom: 2rem;">
                     <h3 style="color: #00C853; margin-bottom: 0.5rem;">Engagement Signals & Heatmaps</h3>
@@ -165,8 +165,8 @@
                 </div>
                 <div style="border-left: 4px solid #333; padding-left: 1.5rem; margin-bottom: 2rem;">
                     <h3 style="color: #B0BEC5; margin-bottom: 0.5rem;">Algorithm-Free</h3>
-                    <!-- TODO: Replace "VibeCode" with the correct feature name once provided by stakeholder -->
-                    <p style="font-size: 0.95rem;">No engagement bait. No forced virality. VibeCode amplifies authentic reactions, not manufactured metrics.</p>
+                    <!-- TODO: Replace "VIBE™" with the correct feature name once provided by stakeholder -->
+                    <p style="font-size: 0.95rem;">No engagement bait. No forced virality. VIBE™ amplifies authentic reactions, not manufactured metrics.</p>
                 </div>
             </div>
         </div>
