--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -110,8 +110,9 @@
         <h1>BUILD FRANCHISES.<br>NOT <span style="color: var(--gold);">FOLLOWERS.</span></h1>
         <p>Vertikal is where you stop chasing algorithms and start building assets. Get your Founders Verification for life.</p>
         <div style="margin-top: 2rem;">
-             <button class="btn" onclick="window.location.href='/apply'">Claim Gold Status</button>
+             <button class="btn" onclick="window.location.href='/apply'">Enter Studio</button>
         </div>
+        <p style="margin-top: 1rem; color: var(--muted); font-size: 0.95rem;">Access VIBE™ overlays, job postings, and franchise IP tools inside your studio.</p>
     </header>
 
     <section class="vk-section" style="text-align:center; background: rgba(255,215,0,0.02);">
@@ -145,19 +146,19 @@
 
     <section class="vk-section">
         <div class="container">
-            <h2 style="border-color: var(--gold);">EXCLUSIVE ACCESS</h2>
+            <h2 style="border-color: var(--gold);">YOUR BADGE</h2>
             <div class="badge-row" style="border-left: 4px solid var(--gold);">
                 <img src="/assets/badges/badge-gold.jpg" alt="Gold V Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
-                    <h3 style="color: var(--gold);">The Founding 50 (Gold)</h3>
-                    <p style="margin:0;">Reserved for the first 50 creators. Highest equity. Defines the platform standard.</p>
+                    <h3 style="color: var(--gold);">Gold — Founding 50</h3>
+                    <p style="margin:0;">The highest creator status. Algorithmic priority, founding equity, and permanent ownership signal. Capped at 50. Once full, this tier closes forever.</p>
                 </div>
             </div>
             <div class="badge-row" style="border-left: 4px solid var(--blue);">
                 <img src="/assets/badges/badge-visionary.jpg" alt="Visionary Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
-                    <h3 style="color: var(--blue);">The Visionary (Blue)</h3>
-                    <p style="margin:0;">For early builders who see the shift. Grants access to beta tools and feedback loops.</p>
+                    <h3 style="color: var(--blue);">Blue — Visionary</h3>
+                    <p style="margin:0;">The next 150 creators (51-200) earn Blue status. Priority access, crew posting privileges, and elevated platform visibility.</p>
                 </div>
             </div>
         </div>
