--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -164,8 +164,8 @@
             <div class="grid grid-2">
                 <div class="card">
                     <h3 style="color: var(--titanium); margin-bottom: 1rem;">1. The Vibe Effect</h3>
-                    <!-- TODO: Replace "VibeCode" with the correct feature name once provided by stakeholder -->
-                    <p style="font-size: 1rem;">VIBE™ (VibeCode) creates real-time engagement without interruption. Comments flow over content, preserving cultural context. This isn't social media—it's cinematic conversation.</p>
+                    <!-- TODO: Replace "VIBE™" with the correct feature name once provided by stakeholder -->
+                    <p style="font-size: 1rem;">VIBE™ creates real-time engagement without interruption. Comments flow over content, preserving cultural context. This isn't social media—it's cinematic conversation.</p>
                 </div>
                 <div class="card">
                     <h3 style="color: var(--titanium); margin-bottom: 1rem;">2. Ownership/IP/Franchise Model</h3>
@@ -232,7 +232,7 @@
                     <p style="font-size: 1rem;">Premium short-form vertical series, long-form, and documentary content built for the 2–10 minute cinematic window.</p>
                 </div>
                 <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--blue);">
-                    <h3 style="color: var(--blue); margin-bottom: 1rem;">VIBE™ (VibeCode)</h3>
+                    <h3 style="color: var(--blue); margin-bottom: 1rem;">VIBE™</h3>
                     <p style="font-size: 1rem;">Live overlay audience layer. Real-time comments flow over content, creating shared viewing experiences without interruption.</p>
                 </div>
                 <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--titanium);">
