--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -140,9 +140,16 @@
                 <img src="/assets/badges/badge-investor.jpg" alt="Green Investor Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--green);">Green Investor Badge</h3>
-                    <p style="margin:0; font-size: 1.1rem;">Pre-launch exclusivity. Permanent ownership signal. Early institutional partners only. Grants priority deal flow and permanent equity recognition. Not available post-launch.</p>
+                    <p style="margin:0; font-size: 1.1rem;">Capital partners funding infrastructure and content production. Investors gain priority access to deal flow and founding equity positions. Vertikal converts premium watch time into advertiser revenue, which funds creator payments, job opportunities, and IP ownership. Early investors secure permanent ownership signals in the ecosystem.</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>HOW VERTIKAL CONVERTS WATCH TIME INTO JOBS AND ECONOMIC ACTIVITY</h2>
+            <p style="color: #fff; font-size: 1.2rem; margin-bottom: 2rem;">Premium watch time generates advertiser revenue. This revenue funds creator payments, which enables productions. Productions create job postings for cast and crew. Crew members build portfolios through verified credits. The cycle reinforces itself: more quality content attracts more premium advertisers, which funds more productions, which creates more jobs. This closed-loop economy transforms passive viewing into active economic participation.</p>
         </div>
     </section>
 
@@ -199,7 +206,7 @@
                     <p style="font-size: 1rem;">Premium short-form vertical series, long-form, and documentary content built for the 2–10 minute cinematic window.</p>
                 </div>
                 <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--blue);">
-                    <h3 style="color: var(--blue); margin-bottom: 1rem;">VIBE™ (VibeCode)</h3>
+                    <h3 style="color: var(--blue); margin-bottom: 1rem;">VIBE™ (VIBE™)</h3>
                     <p style="font-size: 1rem;">Live overlay audience layer. Real-time comments flow over content, creating shared viewing experiences without interruption.</p>
                 </div>
                 <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--green);">
