Enhance beta hub page with ecosystem entry points and badge explanations, update hero tagline

--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -114,6 +114,83 @@
 
     <section>
         <div class="container">
+            <h2>ENTER THE ECOSYSTEM</h2>
+            <p style="font-size: 1.2rem; color: #fff; margin-bottom: 3rem; text-align: center;">Choose your path. Each badge unlocks different levels of access and ownership.</p>
+            <div class="grid grid-2" style="margin-top: 2rem;">
+                <div style="background: var(--card); border: 1px solid var(--border); padding: 2.5rem; border-left: 4px solid #FFD700;">
+                    <h3 style="color: #FFD700; margin-bottom: 1rem;">FOR CREATORS</h3>
+                    <p style="font-size: 1rem; margin-bottom: 1.5rem;">Build franchises, not followers. Join the Founding 50 and own your vertical cinema IP. Post jobs, build crews, and retain ownership.</p>
+                    <a href="https://creators.vertikalapp.com" class="btn" style="border-color: #FFD700; color: #FFD700; padding: 0.75rem 2rem;">Enter Creators</a>
+                </div>
+                <div style="background: var(--card); border: 1px solid var(--border); padding: 2.5rem; border-left: 4px solid #B0BEC5;">
+                    <h3 style="color: #B0BEC5; margin-bottom: 1rem;">FOR NETWORKS</h3>
+                    <p style="font-size: 1rem; margin-bottom: 1.5rem;">Media infrastructure, not just playlists. Studio-grade engines with faster deal flow, validated IP, and priority access to vetted talent.</p>
+                    <a href="https://networks.vertikalapp.com" class="btn" style="border-color: #B0BEC5; color: #B0BEC5; padding: 0.75rem 2rem;">Enter Networks</a>
+                </div>
+                <div style="background: var(--card); border: 1px solid var(--border); padding: 2.5rem; border-left: 4px solid #00C853;">
+                    <h3 style="color: #00C853; margin-bottom: 1rem;">FOR INVESTORS</h3>
+                    <p style="font-size: 1rem; margin-bottom: 1.5rem;">Capitalizing on the rotation. Early access to deal flow, founding equity positions, and permanent ownership signals in the ecosystem.</p>
+                    <a href="https://investors.vertikalapp.com" class="btn" style="border-color: #00C853; color: #00C853; padding: 0.75rem 2rem;">Enter Investors</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>WHY BADGES MATTER</h2>
+            <p style="font-size: 1.2rem; color: #fff; margin-bottom: 2rem;">The V Badge system creates a defensible layer of quality. It signals contribution, priority, and access. Earned, not bought.</p>
+            <div class="grid grid-4" style="margin-top: 2rem;">
+                <div class="badge-card" style="border-left: 4px solid #FFD700;">
+                    <div class="badge-icon b-gold">V</div>
+                    <h3 style="color: #FFD700;">Gold</h3>
+                    <p style="font-size: 0.9rem;">Founding 50 creators. Highest priority, founding equity, permanent ownership signal.</p>
+                </div>
+                <div class="badge-card" style="border-left: 4px solid #2962FF;">
+                    <div class="badge-icon b-blue">V</div>
+                    <h3 style="color: #2962FF;">Blue</h3>
+                    <p style="font-size: 0.9rem;">Visionary creators (51-200). Priority access, crew posting privileges, elevated visibility.</p>
+                </div>
+                <div class="badge-card" style="border-left: 4px solid #00C853;">
+                    <div class="badge-icon b-green">V</div>
+                    <h3 style="color: #00C853;">Green</h3>
+                    <p style="font-size: 0.9rem;">Investors. Priority deal flow, founding equity positions, permanent ownership signals.</p>
+                </div>
+                <div class="badge-card" style="border-left: 4px solid #B0BEC5;">
+                    <div class="badge-icon b-titanium">V</div>
+                    <h3 style="color: #B0BEC5;">Titanium</h3>
+                    <p style="font-size: 0.9rem;">Networks. Studio-level authority, priority access to vetted talent, early deal flow.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>WHY EARLY ACCESS MATTERS</h2>
+            <div class="grid grid-2" style="margin-top: 2rem;">
+                <div style="border-left: 4px solid #333; padding-left: 1.5rem;">
+                    <h3 style="color: #fff; margin-bottom: 0.5rem;">Define The Standard</h3>
+                    <p style="font-size: 0.95rem;">Early creators shape the platform. Your feedback directly influences features, tools, and the future of vertical cinema.</p>
+                </div>
+                <div style="border-left: 4px solid #333; padding-left: 1.5rem;">
+                    <h3 style="color: #fff; margin-bottom: 0.5rem;">Permanent Ownership</h3>
+                    <p style="font-size: 0.95rem;">Founding 50 status is permanent. Once capped, this tier closes forever. Early access means permanent recognition.</p>
+                </div>
+                <div style="border-left: 4px solid #333; padding-left: 1.5rem;">
+                    <h3 style="color: #fff; margin-bottom: 0.5rem;">Priority Everything</h3>
+                    <p style="font-size: 0.95rem;">Algorithmic priority, early feature access, direct feedback loops. Your voice matters more when you're early.</p>
+                </div>
+                <div style="border-left: 4px solid #333; padding-left: 1.5rem;">
+                    <h3 style="color: #fff; margin-bottom: 0.5rem;">Build The Network</h3>
+                    <p style="font-size: 0.95rem;">Connect with other Founding 50 creators. Build crews, collaborate, and create the infrastructure together.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
             <h2>FRIENDS & FAMILY HIGHLIGHTS</h2>
             <p style="font-size: 1.2rem; color: #fff; margin-bottom: 3rem;">Early feedback from our beta testers. The engine is working.</p>
             <div class="grid grid-2">
