--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
     <!-- HERO: STOP ROTATING YOUR PHONE -->
     <header class="container" style="min-height: 85vh; display: flex; flex-direction: column; justify-content: center;">
         <p style="color: #FFD700; letter-spacing: 0.2em; text-transform: uppercase; font-weight: 700; margin-bottom: 1rem;">The New Standard</p>
-        <h1 class="hero-text">STOP ROTATING<br>YOUR PHONE.</h1>
+        <h1 class="hero-text">CINEMA BUILT<br>FOR HOW YOU WATCH.</h1>
         <p style="color: #fff; font-size: 1.2rem; max-width: 700px;">Vertikal is the vertical-first cinematic ecosystem. We are ending the era of disposable content. Built for retention, franchise IP, and Black cultural ownership.</p>
         <div style="margin-top: 2rem;">
             <a href="/apply/" class="btn btn-primary">Join The Movement</a>
