PHASE 2: Web System Repair - Remove empty MARKET section, populate Featured Originals, rebuild demo page, add logo to legal pages

--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
         </div>
     </nav>
 
-    <!-- HERO: STOP ROTATING YOUR PHONE -->
+    <!-- HERO: CINEMA BUILT FOR HOW YOU WATCH -->
     <header class="container" style="min-height: 85vh; display: flex; flex-direction: column; justify-content: center;">
         <p style="color: #FFD700; letter-spacing: 0.2em; text-transform: uppercase; font-weight: 700; margin-bottom: 1rem;">The New Standard</p>
         <h1 class="hero-text">CINEMA BUILT<br>FOR HOW YOU WATCH.</h1>
@@ -243,19 +243,38 @@
         </div>
     </section>
     
-    <!-- MARKET DATA CHARTS -->
-    <section>
-        <div class="container">
-            <h2>THE MARKET</h2>
-            <div class="grid grid-2">
-            </div>
-        </div>
-    </section>
 
     <!-- FEATURED ORIGINALS: 3 VERTICAL POSTER CARDS -->
     <section>
         <div class="container">
             <h2>FEATURED ORIGINALS</h2>
+            <p style="color: #fff; font-size: 1.2rem; margin-bottom: 2rem;">Flagship vertical cinema series from Vertikal Studios and Founding 50 creators.</p>
+            <div class="grid grid-3" style="margin-top: 2rem;">
+                <div class="poster-card">
+                    <div style="position: absolute; bottom: 0; left: 0; right: 0; background: linear-gradient(transparent, rgba(0,0,0,0.9)); padding: 1.5rem;">
+                        <h3 style="color: #fff; font-size: 1.1rem; margin-bottom: 0.5rem;">Beyond the Bases</h3>
+                        <p style="color: #FFD700; font-size: 0.9rem; margin-bottom: 0.25rem;">J.R. Roberts</p>
+                        <p style="color: #888; font-size: 0.85rem;">Pilot</p>
+                    </div>
+                </div>
+                <div class="poster-card">
+                    <div style="position: absolute; bottom: 0; left: 0; right: 0; background: linear-gradient(transparent, rgba(0,0,0,0.9)); padding: 1.5rem;">
+                        <h3 style="color: #fff; font-size: 1.1rem; margin-bottom: 0.5rem;">Dark Room</h3>
+                        <p style="color: #FFD700; font-size: 0.9rem; margin-bottom: 0.25rem;">Joe Guidry</p>
+                        <p style="color: #888; font-size: 0.85rem;">In Production</p>
+                    </div>
+                </div>
+                <div class="poster-card">
+                    <div style="position: absolute; bottom: 0; left: 0; right: 0; background: linear-gradient(transparent, rgba(0,0,0,0.9)); padding: 1.5rem;">
+                        <h3 style="color: #fff; font-size: 1.1rem; margin-bottom: 0.5rem;">Argueably the Best Burgers</h3>
+                        <p style="color: #FFD700; font-size: 0.9rem; margin-bottom: 0.25rem;">Joshua Argue</p>
+                        <p style="color: #888; font-size: 0.85rem;">Pilot</p>
+                    </div>
+                </div>
+            </div>
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="/demo" class="btn">Watch Demo</a>
+            </div>
         </div>
     </section>
 
