--- a/public/terms/index.html
+++ b/public/terms/index.html
@@ -26,6 +26,11 @@
 <div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
   CINEMA ISN'T DYING — IT'S ROTATING
 </div>
+    <nav style="display: flex; justify-content: space-between; align-items: center; padding: 2rem; background: rgba(5,5,5,0.95); position: sticky; top: 0; border-bottom: 1px solid var(--vertikal-gray); z-index: 1000;">
+        <a href="/">
+            <img src="/assets/Vertikal_Logo_Master.png" alt="VERTIKAL" style="height: 40px; width: auto; cursor: pointer;" />
+        </a>
+    </nav>
     <div class="container">
         <a href="/" class="back">← Back to Home</a>
         <h1>TERMS OF SERVICE</h1>
