PHASE 3: Perception Alignment - Make messaging clear, obvious paths for profile creation and job posting

--- a/public/index.html
+++ b/public/index.html
@@ -147,9 +147,11 @@
     <header class="container" style="min-height: 85vh; display: flex; flex-direction: column; justify-content: center;">
         <p style="color: #FFD700; letter-spacing: 0.2em; text-transform: uppercase; font-weight: 700; margin-bottom: 1rem;">The New Standard</p>
         <h1 class="hero-text">CINEMA BUILT<br>FOR HOW YOU WATCH.</h1>
-        <p style="color: #fff; font-size: 1.2rem; max-width: 700px;">Vertikal is the vertical-first cinematic ecosystem. We are ending the era of disposable content. Built for retention, franchise IP, and Black cultural ownership.</p>
+        <p style="color: #fff; font-size: 1.2rem; max-width: 700px; margin-bottom: 1rem;">Vertikal is the vertical-first cinematic ecosystem. We are ending the era of disposable content. Built for retention, franchise IP, and Black cultural ownership.</p>
+        <p style="color: #888; font-size: 1rem; max-width: 700px; margin-bottom: 2rem;">Create vertical cinema series. Post cast and crew jobs. Own your IP. Build franchises, not followers.</p>
         <div style="margin-top: 2rem;">
             <a href="/apply/" class="btn btn-primary">Join The Movement</a>
+            <a href="/demo" class="btn">Watch Demo</a>
             <a href="/invest/" class="btn">View The Thesis</a>
         </div>
     </header>
@@ -185,7 +187,11 @@
     <section>
         <div class="container">
             <h2>JOBS INSIDE THE PLATFORM</h2>
-            <p style="color: #fff; font-size: 1.2rem; margin-bottom: 2rem;">Every creator profile becomes a hiring hub. Post cast and crew roles directly from your productions. Applicants respond inside Vertikal. No external job boards. No middleware. Hiring happens where the work lives.</p>
+            <p style="color: #fff; font-size: 1.2rem; margin-bottom: 1rem;">Every creator profile becomes a hiring hub. Post cast and crew roles directly from your productions. Applicants respond inside Vertikal. No external job boards. No middleware. Hiring happens where the work lives.</p>
+            <p style="color: #888; font-size: 1rem; margin-bottom: 2rem;">To get started: <a href="/apply/" style="color: #FFD700; text-decoration: underline;">Apply as a creator</a>, complete your profile, then post jobs from your profile dashboard.</p>
+            <div style="margin-top: 2rem;">
+                <a href="/creators/" class="btn">See Creator Profiles</a>
+            </div>
         </div>
     </section>
 
