Fix final CTA section with multiple action paths

--- a/public/index.html
+++ b/public/index.html
@@ -312,8 +312,13 @@
     <section>
         <div class="container" style="text-align: center;">
             <h2>OWNERSHIP. NOT CHARITY.</h2>
-            <p style="color: #fff; font-size: 1.2rem; margin-bottom: 2rem;">Black culture drives the algorithm, but we don't own the platform. Vertikal is a market opportunity designed to <strong>retain IP, retain revenue, and retain leverage.</strong></p>
-            <a href="/apply/" class="btn btn-primary">Join The Founding 50</a>
+            <p style="color: #fff; font-size: 1.2rem; margin-bottom: 1rem;">Black culture drives the algorithm, but we don't own the platform. Vertikal is a market opportunity designed to <strong>retain IP, retain revenue, and retain leverage.</strong></p>
+            <p style="color: #888; font-size: 1rem; margin-bottom: 2rem;">Ready to build? <a href="/apply/" style="color: #FFD700; text-decoration: underline;">Apply as a creator</a> or <a href="/invest/" style="color: #FFD700; text-decoration: underline;">invest in the platform</a>.</p>
+            <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                <a href="/apply/" class="btn btn-primary">Join The Founding 50</a>
+                <a href="/demo" class="btn">Watch Demo</a>
+                <a href="/beta" class="btn">Join Beta</a>
+            </div>
         </div>
     </section>
 
