MASTER DIRECTIVE EXECUTED: Updated homepage hero, added How Creators Earn section, updated demo page, added onboarding flow, enhanced profile visibility, added monetization screen

--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -146,8 +146,8 @@
     </nav>
     
     <div class="container">
-        <h1>THIS IS VERTIKAL IN MOTION</h1>
-        <p class="subtitle">Experience vertical cinema built for how you watch. Flagship originals from Vertikal Studios and Founding 50 creators.</p>
+        <h1>THIS IS VERTICAL CINEMA IN MOTION</h1>
+        <p class="subtitle">In the next 30 seconds, you'll see how VERTIKAL, LLC. enables creators to build, own, and earn in vertical cinema. Watch real projects from Founding 50 creators launching productions, hiring crews, and retaining IP ownership.</p>
         
         <div class="video-grid">
             <div class="video-card">
