--- a/public/index.html
+++ b/public/index.html
@@ -143,16 +143,14 @@
         </div>
     </nav>
 
-    <!-- HERO: CINEMA BUILT FOR HOW YOU WATCH -->
+    <!-- HERO: BUILD. OWN. EARN. IN VERTICAL CINEMA. -->
     <header class="container" style="min-height: 85vh; display: flex; flex-direction: column; justify-content: center;">
-        <p style="color: #FFD700; letter-spacing: 0.2em; text-transform: uppercase; font-weight: 700; margin-bottom: 1rem;">The New Standard</p>
-        <h1 class="hero-text">CINEMA BUILT<br>FOR HOW YOU WATCH.</h1>
-        <p style="color: #fff; font-size: 1.2rem; max-width: 700px; margin-bottom: 1rem;">Vertikal is the vertical-first cinematic ecosystem. We are ending the era of disposable content. Built for retention, franchise IP, and Black cultural ownership.</p>
-        <p style="color: #888; font-size: 1rem; max-width: 700px; margin-bottom: 2rem;">Create vertical cinema series. Post cast and crew jobs. Own your IP. Build franchises, not followers.</p>
+        <p style="color: #FFD700; letter-spacing: 0.2em; text-transform: uppercase; font-weight: 700; margin-bottom: 1rem;">VERTIKAL, LLC.</p>
+        <h1 class="hero-text">BUILD. OWN. EARN.<br>IN VERTICAL CINEMA.</h1>
+        <p style="color: #fff; font-size: 1.2rem; max-width: 700px; margin-bottom: 2rem;">VERTIKAL, LLC. is the infrastructure for creators to launch productions, hire crews, retain IP, and turn watch time into real economic opportunity.</p>
         <div style="margin-top: 2rem;">
-            <a href="/apply/" class="btn btn-primary">Join The Movement</a>
-            <a href="/demo" class="btn">Watch Demo</a>
-            <a href="/invest/" class="btn">View The Thesis</a>
+            <a href="/apply/" class="btn btn-primary">Apply to Build</a>
+            <a href="/demo" class="btn">Watch the Demo</a>
         </div>
     </header>
 
