--- a/public/index.html
+++ b/public/index.html
@@ -323,10 +323,11 @@
     <!-- FOOTER -->
     <footer>
         <div class="container">
-            <p style="color: var(--muted); margin-bottom: 1rem;">© 2024 VERTIKAL. All rights reserved.</p>
-            <div style="display: flex; justify-content: center; gap: 2rem;">
-                <a href="/terms" style="color: var(--muted); text-decoration: none;">Terms</a>
-                <a href="/privacy" style="color: var(--muted); text-decoration: none;">Privacy</a>
+            <p style="color: var(--muted); margin-bottom: 1rem;">© 2024 VERTIKAL, LLC. All rights reserved.</p>
+            <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap; margin-bottom: 1rem;">
+                <a href="/terms/" style="color: var(--muted); text-decoration: none;">Terms of Service</a>
+                <a href="/privacy/" style="color: var(--muted); text-decoration: none;">Privacy Policy</a>
+                <a href="/contact/" style="color: var(--muted); text-decoration: none;">Contact</a>
             </div>
         </div>
     </footer>
