Add missing How Creators Earn section to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -181,6 +181,39 @@
         </div>
     </section>
 
+    <!-- HOW CREATORS EARN -->
+    <section>
+        <div class="container">
+            <h2>HOW CREATORS EARN</h2>
+            <p style="color: #fff; font-size: 1.2rem; margin-bottom: 2rem;">Day-One monetization. No waiting. No gatekeeping. Real economic opportunity from the moment you launch.</p>
+            <div class="grid grid-2" style="margin-top: 2rem;">
+                <div class="feature-card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #FFD700;">
+                    <h3 style="color: #FFD700; margin-bottom: 1rem;">Launch a Project Immediately</h3>
+                    <p style="font-size: 1rem;">Create your profile, upload your work, and launch your first vertical cinema project. No approval process. No gatekeeping.</p>
+                </div>
+                <div class="feature-card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #2962FF;">
+                    <h3 style="color: #2962FF; margin-bottom: 1rem;">Post Cast & Crew Roles</h3>
+                    <p style="font-size: 1rem;">Every creator profile is a hiring hub. Post roles directly from your productions. Applicants respond inside VERTIKAL, LLC.</p>
+                </div>
+                <div class="feature-card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #00C853;">
+                    <h3 style="color: #00C853; margin-bottom: 1rem;">Receive Applicants</h3>
+                    <p style="font-size: 1rem;">Cast and crew apply directly through the platform. Review portfolios, schedule auditions, hire where the work lives.</p>
+                </div>
+                <div class="feature-card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #B0BEC5;">
+                    <h3 style="color: #B0BEC5; margin-bottom: 1rem;">Earn from Engagement</h3>
+                    <p style="font-size: 1rem;">Earn from early engagement, sponsorship pools, and licensing interest. Revenue flows back to creators. No middlemen.</p>
+                </div>
+            </div>
+            <div style="margin-top: 2rem; padding: 2rem; background: var(--card); border: 1px solid var(--border); border-left: 4px solid #FFD700;">
+                <h3 style="color: #FFD700; margin-bottom: 1rem;">Retain IP Ownership</h3>
+                <p style="font-size: 1rem; color: #fff;">You own your content. You own your audience. You own your IP. VERTIKAL, LLC. is infrastructure, not ownership.</p>
+            </div>
+            <div style="margin-top: 2rem; text-align: center;">
+                <a href="/apply/" class="btn btn-primary">Apply to Build</a>
+            </div>
+        </div>
+    </section>
+
     <!-- JOBS INSIDE THE PLATFORM -->
     <section>
         <div class="container">
