CLAUDE MAXIMUM FIX: Job posting section, Investors clarity, Networks trust, Beta hub, all CTAs verified

--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -107,9 +107,12 @@
     </nav>
 
     <section class="container" style="text-align: center; padding-top: 8rem;">
-        <h1 class="hero-text">INSIDE THE ENGINE.</h1>
-        <p style="margin: 0 auto 2rem auto; font-size: 1.3rem; color: #fff;">You are standing on the ground floor. This is a preview of the operating system for Black ownership.</p>
-        <a href="/download/" class="btn" style="background: #fff; color: #000;">Download Beta (TestFlight)</a>
+        <h1 class="hero-text">BETA ACCESS HUB</h1>
+        <p style="margin: 0 auto 2rem auto; font-size: 1.3rem; color: #fff;">Early access to VERTIKAL, LLC. Join the Founding 50, access the platform, and build vertical cinema productions with full IP ownership.</p>
+        <div style="margin-top: 2rem;">
+            <a href="/apply/" class="btn btn-primary" style="margin-right: 1rem;">Join Beta</a>
+            <a href="/demo" class="btn">Watch Demo</a>
+        </div>
     </section>
 
     <section>
@@ -120,17 +123,17 @@
                 <div style="background: var(--card); border: 1px solid var(--border); padding: 2.5rem; border-left: 4px solid #FFD700;">
                     <h3 style="color: #FFD700; margin-bottom: 1rem;">FOR CREATORS</h3>
                     <p style="font-size: 1rem; margin-bottom: 1.5rem;">Build franchises, not followers. Join the Founding 50 and own your vertical cinema IP. Post jobs, build crews, and retain ownership.</p>
-                    <a href="https://creators.vertikalapp.com" class="btn" style="border-color: #FFD700; color: #FFD700; padding: 0.75rem 2rem;">Enter Creators</a>
+                    <a href="/apply/" class="btn" style="border-color: #FFD700; color: #FFD700; padding: 0.75rem 2rem;">Join Beta</a>
                 </div>
                 <div style="background: var(--card); border: 1px solid var(--border); padding: 2.5rem; border-left: 4px solid #B0BEC5;">
                     <h3 style="color: #B0BEC5; margin-bottom: 1rem;">FOR NETWORKS</h3>
                     <p style="font-size: 1rem; margin-bottom: 1.5rem;">Media infrastructure, not just playlists. Studio-grade engines with faster deal flow, validated IP, and priority access to vetted talent.</p>
-                    <a href="https://networks.vertikalapp.com" class="btn" style="border-color: #B0BEC5; color: #B0BEC5; padding: 0.75rem 2rem;">Enter Networks</a>
+                    <a href="/networks/" class="btn" style="border-color: #B0BEC5; color: #B0BEC5; padding: 0.75rem 2rem;">Networks</a>
                 </div>
                 <div style="background: var(--card); border: 1px solid var(--border); padding: 2.5rem; border-left: 4px solid #00C853;">
                     <h3 style="color: #00C853; margin-bottom: 1rem;">FOR INVESTORS</h3>
                     <p style="font-size: 1rem; margin-bottom: 1.5rem;">Capitalizing on the rotation. Early access to deal flow, founding equity positions, and permanent ownership signals in the ecosystem.</p>
-                    <a href="https://investors.vertikalapp.com" class="btn" style="border-color: #00C853; color: #00C853; padding: 0.75rem 2rem;">Enter Investors</a>
+                    <a href="/investors/" class="btn" style="border-color: #00C853; color: #00C853; padding: 0.75rem 2rem;">Investors</a>
                 </div>
             </div>
         </div>
