--- a/public/index.html
+++ b/public/index.html
@@ -181,6 +181,35 @@
         </div>
     </section>
 
+    <!-- POST ROLES. HIRE CREWS. BUILD PRODUCTIONS. -->
+    <section>
+        <div class="container">
+            <h2>POST ROLES. HIRE CREWS. BUILD PRODUCTIONS.</h2>
+            <p style="color: #fff; font-size: 1.2rem; margin-bottom: 1rem;">Creators post cast & crew roles inside VERTIKAL, LLC. Applicants apply directly in-platform. Hiring creates verified credits. This converts attention into careers.</p>
+            <div class="grid grid-2" style="margin-top: 2rem;">
+                <div class="feature-card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #FFD700;">
+                    <h3 style="color: #FFD700; margin-bottom: 1rem;">1. Post a Role</h3>
+                    <p style="font-size: 1rem;">Create a job posting directly from your creator profile. Specify role, project, and requirements. Your V Badge status determines visibility and reach.</p>
+                </div>
+                <div class="feature-card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #2962FF;">
+                    <h3 style="color: #2962FF; margin-bottom: 1rem;">2. Review Applicants</h3>
+                    <p style="font-size: 1rem;">Viewer-crew members apply with their Vertikal profile. See their credits, portfolio, and verified work history. Filter by experience level and specialization.</p>
+                </div>
+                <div class="feature-card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #00C853;">
+                    <h3 style="color: #00C853; margin-bottom: 1rem;">3. Hire & Credit</h3>
+                    <p style="font-size: 1rem;">Select your crew. Their work is automatically credited to your project. Build your team's reputation and unlock higher-tier opportunities together.</p>
+                </div>
+                <div class="feature-card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #B0BEC5;">
+                    <h3 style="color: #B0BEC5; margin-bottom: 1rem;">4. Build Your Network</h3>
+                    <p style="font-size: 1rem;">Every collaboration strengthens your profile. Crew members become part of your verified network. Turn viewers into permanent production partners.</p>
+                </div>
+            </div>
+            <div style="margin-top: 2rem; text-align: center;">
+                <a href="/apply/" class="btn btn-primary">Post a Role</a>
+            </div>
+        </div>
+    </section>
+
     <!-- HOW CREATORS EARN -->
     <section>
         <div class="container">
