--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -103,8 +103,11 @@
 
     <header class="container" style="padding-top: 8rem; min-height: 85vh; display: flex; flex-direction: column; justify-content: center;">
         <div style="color:#00C853; letter-spacing:0.2em; font-weight:700; margin-bottom:1rem;">INVESTMENT THESIS</div>
-        <h1 class="hero-text">CAPITALIZING ON<br><span>THE ROTATION.</span></h1>
-        <p style="font-size: 1.4rem; color: #fff; max-width: 800px;">Cinema isn't dying; it's rotating 90 degrees. Vertikal is the scalable media infrastructure built to capture this shift and retain Black cultural ownership.</p>
+        <h1 class="hero-text">INFRASTRUCTURE.<br><span>NOT A SOCIAL APP.</span></h1>
+        <p style="font-size: 1.4rem; color: #fff; max-width: 800px;">VERTIKAL, LLC. is scalable media infrastructure. We convert watch time into jobs, retain IP ownership, and create long-term value through verified talent networks and closed-loop economics.</p>
+        <div style="margin-top: 3rem;">
+            <a href="/investors/" class="btn btn-primary">Invest in Infrastructure</a>
+        </div>
     </header>
 
     <section>
