--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -104,9 +104,9 @@
 
     <header class="container" style="padding-top: 8rem; min-height: 85vh; display: flex; flex-direction: column; justify-content: center;">
         <h1 class="hero-text">MEDIA INFRASTRUCTURE.<br><span>NOT JUST PLAYLISTS.</span></h1>
-        <p style="font-size: 1.4rem; color: #fff; max-width: 800px;">Vertikal Networks are the studio-grade engines powering the short-series economy. Faster deal flow. Reduced risk. Validated IP. Financial upside.</p>
+        <p style="font-size: 1.4rem; color: #fff; max-width: 800px;">VERTIKAL Networks connects distributors with vetted creators, validated IP, and verified talent. The badge system reduces risk. Vertical-first content scales across FAST and SVOD channels.</p>
         <div style="margin-top: 3rem;">
-            <a href="#roi" class="btn">See The ROI</a>
+            <a href="/contact" class="btn btn-primary">Partner With Us</a>
         </div>
     </header>
 
