CLAUDE MAXIMUM FIX: Remove remaining forbidden terms, complete all prompts

--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -163,7 +163,7 @@
             <h2>WHY VERTIKAL IS DIFFERENT</h2>
             <div class="grid grid-2">
                 <div class="card">
-                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">1. The Vibe Effect</h3>
+                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">1. VIBE™ Overlays</h3>
                     <!-- TODO: Replace "VIBE™" with the correct feature name once provided by stakeholder -->
                     <p style="font-size: 1rem;">VIBE™ creates real-time engagement without interruption. Comments flow over content, preserving cultural context. This isn't social media—it's cinematic conversation.</p>
                 </div>
